--- a/src/app/shared/components/course-card/course-card.component.scss
+++ b/src/app/shared/components/course-card/course-card.component.scss
@@ -31,4 +31,14 @@
       margin-top: 16px;
     }
   }
+
+  &__info-actions {
+    display: flex;
+    gap: 10px;
+  }
+
+  &__buttons {
+    display: flex;
+    gap: 10px;
+  }
 }
