--- a/src/app/shared/components/course-card/course-card.component.html
+++ b/src/app/shared/components/course-card/course-card.component.html
@@ -1,22 +1,22 @@
 <div class="course-card">
     <div class="course-card__description">
-      <!-- Replace ::text:: with your code -->
-      <div class="course-card__description-title">::Title::</div>
-      <div class="course-card__description-text">::Description::</div>
+      <div class="course-card__description-title">{{title}}</div>
+      <div class="course-card__description-text">{{description}}</div>
     </div>
     <div class="course-card__info">
         <div class="course-card__info-text">
             <div>
               <b>Authors: </b>
-              ::Authors::
+              TODO
             </div>
-            <div><b>Duration: </b><span class="course-card__duration">::Duration::</span></div>
-            <div><b>Created: </b><span class="course-card__date">::Creation Date::</span></div>
+            <div><b>Duration: </b><span class="course-card__duration">{{duration}}</span></div>
+            <div><b>Created: </b><span class="course-card__date">{{creationDate}}</span></div>
         </div>
         <div class="course-card__info-actions">
-            <app-button></app-button>
-            <div class="course-card__buttons">
-                <!--Enter your code here-->
+            <app-button [buttonText]="'Show courses'" [onClick]="clickOnShow"></app-button>
+            <div *ngIf="editable" class="course-card__buttons">
+                <app-button [iconName]="'edit'" (click)="editCourse"></app-button>
+                <app-button [iconName]="'trash'" (click)="deleteCourse"></app-button>
             </div>
         </div>
     </div>
