--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,10 +2,17 @@
 
 .app-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     height: 80px;
     padding: 0 30px;
+    gap: 26px;
     background-color: $color-white;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+}
+
+.app-header__logo {
+    align-self: flex-start;
+    margin-right: auto;
+    padding: 16px 0;
 }
