--- a/src/app/features/course-info/course-info.component.html
+++ b/src/app/features/course-info/course-info.component.html
@@ -13,5 +13,5 @@
   </div>
 </div>
 <div class="navigation-block">
-  <!--Enter your code here-->
+  <app-button buttonText="Back"></app-button>
 </div>
