--- a/src/app/shared/components/info/info.component.html
+++ b/src/app/shared/components/info/info.component.html
@@ -1,5 +1,5 @@
 <div class="app-info">
   <div class="app-info__header">{{title}}</div>
   <div class="app-info__title">{{text}}</div>
-  <app-button [onClick]="onClick" buttonText="Add New Course"></app-button>
+  <ng-content></ng-content>
 </div>
