--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,4 @@
 <div class="app-header">
   <img class="app-header__logo" alt="logo" src="assets/logo.svg">
-  <span *ngIf="user">{{user}}</span>
-  <app-button [buttonText]="buttonText" [iconName]="headerButtonIcon" [onClick]="handleLogin"></app-button>
+  <ng-content></ng-content>
 </div>
