--- a/src/app/shared/components/info/info.component.scss
+++ b/src/app/shared/components/info/info.component.scss
@@ -1,7 +1,9 @@
 .app-info {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   &__header {
     font-weight: 700;
