--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,4 @@
-<div tabindex="0" class="app-button" (click)="handleClick()" >
-  <fa-icon *ngIf="iconName" [icon]="['fas', iconName]"></fa-icon>
+<button tabindex="0" class="app-button" (click)="handleClick()" [disabled]="disabled">
+  <fa-icon *ngIf="iconName" [icon]="['fas', iconName]" type="type"></fa-icon>
   <span>{{ buttonText }}</span>
-</div>
+</button>
