--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -4,6 +4,9 @@
     justify-content: center;
     align-items: center;
     padding: 13px 36px;
+    outline: none;
+    border: none;
+    margin: 0 auto;
     gap: 10px;
     background: #007298;
     border-radius: 4px;
@@ -21,6 +24,10 @@
 
     &:active {
         background: #003c50;
+    }
+
+    &:disabled {
+        opacity: 0.3;
     }
 
     &__single-icon {
