--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -1,24 +1,36 @@
 <h2 class="text-align-center">Login</h2>
 <div class="app-plate">
-  <form #loginForm="ngForm">
+  <form #loginForm="ngForm" >
     <div class="login-form">
       <div>
         <div class="form__control">
           <label for="email">Email</label>
           <!--Use the name `email` for the form control.-->
-          <input type="text" id="email" placeholder="Input text"/>
-          <span id="emailErrorMessage" class="text-danger">Email is required.</span>
+          <input
+            name="credentials.email"
+            required
+            type="text"
+            id="email"
+            placeholder="Input text"
+            emailValidator
+            [(ngModel)]="credentials.email"
+            #email="ngModel"
+          />
+          <span *ngIf="email.errors?.['required'] && (email.dirty || email.touched)" id="emailErrorMessage" class="text-danger">Email is required.</span>
+          <span *ngIf="email.errors?.['emailValidation'] && (email.dirty || email.touched)" id="emailValidationMessage" class="text-danger">Should contain @.</span>
         </div>
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" id="password" placeholder="Input text"/>
-          <span id="passwordErrorMessage" class="text-danger">Password is required.</span>
+          <input type="password" [(ngModel)]="credentials.password" #password="ngModel" required minlength="4" name="password" id="password" placeholder="Input text"/>
+          <span *ngIf="password.errors?.['required'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password is required.</span>
+          <span *ngIf="password.errors?.['minlength'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password should be minimum 4 characters long.</span>
         </div>
       </div>
       <div>
         <div class="form__action">
-          <app-button></app-button>
+          <!-- <button type="submit">Submit</button> -->
+          <app-button type="submit" buttonText="Login" (onClick)="onSubmit(loginForm)"></app-button>
         </div>
         <div class="form__text">
           If you don't have an account you may <strong>Registration</strong>
