--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -22,7 +22,7 @@
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" [(ngModel)]="credentials.password" #password="ngModel" required minlength="4" name="password" id="password" placeholder="Input text"/>
+          <input type="password" [(ngModel)]="credentials.password" #password="ngModel" required minlength="4" name="password" id="password" placeholder="Input text" hidePassword />
           <span *ngIf="password.errors?.['required'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password is required.</span>
           <span *ngIf="password.errors?.['minlength'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password should be minimum 4 characters long.</span>
         </div>
