--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -16,13 +16,23 @@
             [(ngModel)]="credentials.email"
             #email="ngModel"
           />
-          <span *ngIf="email.errors?.['required'] && (email.dirty || email.touched)" id="emailErrorMessage" class="text-danger">Email is required.</span>
-          <span *ngIf="email.errors?.['emailValidation'] && (email.dirty || email.touched)" id="emailValidationMessage" class="text-danger">Should contain @.</span>
+          <span *ngIf="email.errors?.['required'] && loginForm.submitted" id="emailErrorMessage" class="text-danger">Email is required.</span>
+          <span *ngIf="email.errors?.['emailValidation'] && loginForm.submitted" id="emailValidationMessage" class="text-danger">Should contain @.</span>
         </div>
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" [(ngModel)]="credentials.password" #password="ngModel" required minlength="4" name="password" id="password" placeholder="Input text" hidePassword />
+          <input
+            type="password"
+            [(ngModel)]="credentials.password"
+            #password="ngModel"
+            required
+            minlength="4"
+            name="password"
+            id="password"
+            placeholder="Input text"
+            hidePassword
+          />
           <span *ngIf="password.errors?.['required'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password is required.</span>
           <span *ngIf="password.errors?.['minlength'] && (password.dirty || password.touched)" id="passwordErrorMessage" class="text-danger">Password should be minimum 4 characters long.</span>
         </div>
