--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,8 +29,8 @@ textarea {
   font-family: "Open Sans", sans-serif;
 }
 
-input:invalid,
-textarea:invalid {
+input.ng-invalid.ng-touched ,
+textarea.ng-invalid.ng-touched  {
   border-color: $color-red;
 }
 
@@ -45,4 +45,12 @@ h2 {
 
 hr {
   width: 100%
+}
+
+.showPassword {
+  position: absolute;
+  right: 20px;
+  top: 40px;
+  select: none;
+  cursor: pointer;
 }
