--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </app-header>
 <div class="app-root">
   <!-- Search component -->
-  <app-search></app-search>
+  <!-- <app-search></app-search> -->
 
   <!-- Info component -->
   <!-- <app-info [title]="emptyInfoTitle" [text]="emptyInfoText"> -->
@@ -17,13 +17,13 @@
   <!-- <app-course-info [course]="mockCourse"></app-course-info> -->
 
   <!-- Login Form component -->
-  <app-login-form></app-login-form>
+  <!-- <app-login-form></app-login-form> -->
 
   <!-- Login Form component -->
-  <app-registration-form></app-registration-form>
+  <!-- <app-registration-form></app-registration-form> -->
 
   <!-- Login Form component -->
-  <app-course-form></app-course-form>
+  <!-- <app-course-form></app-course-form> -->
 
   <!-- Modal component -->
   <!-- <app-modal [message]="'Message'" [title]="'Title'" [okButtonText]="'Ok'" [cancelButtonText]="'Cancel'"></app-modal> -->
@@ -31,4 +31,5 @@
   <!-- <hr> -->
   <!-- <h2> App Courses</h2> -->
   <!-- <app-courses></app-courses> -->
+  <router-outlet></router-outlet>
 </div>
