--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,6 @@
 <div class="app-header">
-  <img class="app-header__logo" alt="logo" src="assets/logo.svg">
+  <a class="app-header__logo" routerLink="/courses" [routerLink]="['/courses']">
+    <img  alt="logo" src="assets/logo.svg">
+  </a>
   <ng-content></ng-content>
 </div>
