--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -43,7 +43,7 @@
           <app-button type="submit" buttonText="Login" (onClick)="onSubmit(loginForm)"></app-button>
         </div>
         <div class="form__text">
-          If you don't have an account you may <strong>Registration</strong>
+          If you don't have an account you may <a routerLink='/registration'>Registration</a>
         </div>
       </div>
     </div>
