--- a/src/app/features/courses/courses-list/courses-list.component.html
+++ b/src/app/features/courses/courses-list/courses-list.component.html
@@ -1,6 +1,10 @@
+<app-search (onSearchEvent)="onSearchEvent($event)"></app-search>
 <div *ngFor="let course of courses">
   <app-course-card [course]="course" (clickOnShow)="showCourse()">
-    <app-button [iconName]="'edit'" (onClick)="editCourse()"></app-button>
-    <app-button [iconName]="'trash'" (onClick)="deleteCourse()"></app-button>
+    <app-button [iconName]="'edit'" (onClick)="editCourse(course.id)"></app-button>
+    <app-button [iconName]="'trash'" (onClick)="deleteCourse(course.id)"></app-button>
   </app-course-card>
 </div>
+<app-info [title]="emptyInfoTitle" [text]="emptyInfoText">
+  <app-button buttonText="Add New Course" (onClick)="handleAddNewCourse()"></app-button>
+</app-info>
