--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 13px 36px;
+    padding: 12px;
     outline: none;
     border: none;
     margin: 0 auto;
