--- a/src/app/shared/components/registration-form/registration-form.component.html
+++ b/src/app/shared/components/registration-form/registration-form.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="form__action">
-      <app-button [disabled]="!registrationForm.valid" (onClick)="onSubmit(registrationForm)" buttonText="Login"></app-button>
+      <app-button [disabled]="!registrationForm.valid" (onClick)="onSubmit(registrationForm)" buttonText="Register"></app-button>
     </div>
   </form>
 </div>
