--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -1,4 +1,4 @@
 <div class="app-courses">
   <loader *ngIf="isLoading"></loader>
-  <app-courses-list [courses]="data"></app-courses-list>
+  <app-courses-list [courses]="(data | async)"></app-courses-list>
 </div>
